chore: added parameter, fix zoom level function
